<resources>
    <string name="app_name">Course_App</string>

    <string name="sign_in">Sign In</string>
    <string name="user_gmail_com">Email</string>
    <string name="your_paswword">Password</string>
    <string name="remember_me">RememberMe</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="reduce"><![CDATA[We Provide the best learning courses & great mentors!]]></string>
    <string name="a2">Learn anytime and any where easily and conveniently</string>
    <string name="a3">Let‘s improve your skills together with Elera right now!</string>
    <string name="Next">Next</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="enter_the_new_password">New password</string>
    <string name="save_the_password">Save password</string>
    <string name="login">LOGIN</string>
    <string-array name="onboarding_titles">
        <item>@string/reduce</item>
        <item>@string/a2</item>
        <item>@string/a3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_image">course image</string>
</resources>